Fixed the conversion of the default word list file path into a URL. The previous conversion did not work correctly for Windows local paths (e.g. C:\...). Instead, use the automatic conversion of File.toURI().toURL().